# devalot-backend

./: .gitignore  backend.hs  default.nix  devalot-backend.cabal  devalot-backend.nix  flake.nix
nix/: sources.json
src/Devalot/Backend/: App.hs  Feedback.hs
src/Devalot/Backend/Snaplets/: Feedback.hs
test/: FeedbackSpec.hs  Main.hs
