name:          devalot-backend
version:       1.0.0.0
homepage:      http://www.devalot.com
license:       BSD2
license-file:  LICENSE
author:        Peter Jones <pjones@devalot.com>
maintainer:    Peter Jones <pjones@devalot.com>
copyright:     Copyright (C) 2013-2017 Peter Jones
category:      Web
build-type:    Simple
tested-with:   GHC == 8.0.2, GHC == 8.2.2
cabal-version: 1.18

------------------------------------------------------------------------------
library
  ghc-options: -Wall -Werror -fwarn-incomplete-uni-patterns
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
    Devalot.Backend.App
    Devalot.Backend.Snaplets.Feedback

  build-depends: base                      >= 4.4   && < 5.0
               , aeson                     >= 1.1   && < 1.4
               , bytestring                >= 0.8   && < 0.11
               , lens                      >= 3.9   && < 4.17
               , mime-mail                 >= 0.3   && < 0.5
               , mtl                       >= 2.0   && < 2.3
               , snap                      >= 0.13  && < 1.2
               , snap-core                 >= 0.8   && < 1.2
               , snap-server               >= 0.8   && < 1.2
               , text                      >= 0.10  && < 1.3

------------------------------------------------------------------------------
executable devalot-backend
  main-is: backend.hs
  ghc-options: -Wall -Werror -fwarn-incomplete-uni-patterns
  default-language: Haskell2010
  build-depends: base
               , bytestring
               , devalot-backend
               , snap
               , snap-server

------------------------------------------------------------------------------
test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  ghc-options: -Wall -Werror -fwarn-incomplete-uni-patterns
  default-language: Haskell2010
  main-is: Main.hs
  other-modules: FeedbackSpec
  build-depends: base             >= 4.4   && < 5.0
               , HUnit            >= 1.2   && < 1.7
               , bytestring       >= 0.8   && < 0.11
               , case-insensitive >= 1.0   && < 1.3
               , hspec            >= 2.0   && < 2.6
               , devalot-backend
               , snap
               , snap-core
               , text
